Sun Jun 10 12:57:16 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_btreebase.cc,backends/brass/brass_btreebase.h,
	  backends/brass/brass_check.cc: Remove is_empty(), tweak
	  calculate_last_block() to calculate the bit map size correctly in
	  the case of an empty table, and use the bit map size instead of
	  is_empty() in xapian-check.
	* backends/chert/chert_btreebase.cc,backends/chert/chert_btreebase.h,
	  backends/chert/chert_check.cc: Make equivalent changes for chert.

Sun Jun 10 11:27:52 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_table.cc,backends/brass/brass_table.h: We don't
	  need the workaround for existing tables which were built with a 32
	  bit item count for brass, since that bug was fixed in 1.1.4, which
	  is the same version which brass was added in.

Sun Jun 10 11:20:58 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_btreebase.cc,backends/brass/brass_btreebase.h,
	  backends/chert/chert_btreebase.cc,backends/chert/chert_btreebase.h:
	  Remove unused copy constructors for BrassTable_base and
	  ChertTable_base.

Wed Jun 06 11:10:26 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Note that STEM_ALL_Z was added in
	  1.2.11.  Change already made on 1.2 branch.

Tue Jun 05 06:51:12 GMT 2012  Olly Betts <olly@survex.com>

	* common/compression_stream.cc,common/compression_stream.h: Move the
	  default argument to the CompressionStream constructor to the header
	  and mark the constructor as explicit, since it has a single argument
	  form.

Tue Jun 05 06:41:22 GMT 2012  Olly Betts <olly@survex.com>

	* api/queryvector.h: Fix somewhat dubious warning from clang.

Tue Jun 05 06:33:09 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Overhaul handling of compilers which pretend to be GCC,
	  using a simple "case" on the preprocessed output of '__INTEL_COMPILER
	  __clang__' to tell which is in use.  We now explicitly check for