@@ -1,7 +1,7 @@
 #!/bin/sh
 # @configure_input@
 #
-# Copyright (C) 2002,2003,2004,2005,2006,2007,2009,2010 Olly Betts
+# Copyright (C) 2002,2003,2004,2005,2006,2007,2009,2010,2012 Olly Betts
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License as
@@ -64,12 +64,18 @@ is_uninstalled()
 
 need_explicit_dependencies()
 {
-    [ no = "$static" ] || return 0 # "true"
     # For static libraries, we need to explicitly link with dependency_libs
-    # on all platforms.  If we only have static libraries, then "$dlname"
-    # will be empty.
-    extract_dlname "@libdir@/libxapian@LIBRARY_VERSION_SUFFIX@.la"
-    [ -n "$dlname" ] || return 0 # "true"
+    # on all platforms.  For shared libraries, it depends on the platform.
+
+    # xapian-config --static means static libraries.
+    [ no = "$static" ] || return 0 # "true"
+
+    # If the .la file hasn't been installed, assume there are shared libraries.
+    if [ -f "@libdir@/libxapian@LIBRARY_VERSION_SUFFIX@.la" ] ; then
+	# If "$dlname" is empty, we only have static libraries.
+	extract_dlname "@libdir@/libxapian@LIBRARY_VERSION_SUFFIX@.la"
+	[ -n "$dlname" ] || return 0 # "true"
+    fi
 
     # Vanilla libtool set this to either "yes" or "unknown" and then handles
     # both of these the same way, but our configure forces this to "no" on
