@@ -1,3 +1,8 @@
+Tue Jun 12 01:08:17 GMT 2012  Olly Betts <olly@survex.com>
+
+	* xapian-config.in: Don't interpret a missing .la file as meaning that
+	  we only have static libraries.
+
 Sun Jun 10 12:57:16 GMT 2012  Olly Betts <olly@survex.com>
 
 	* backends/brass/brass_btreebase.cc,backends/brass/brass_btreebase.h,
